--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "python-dotenv (>=1.1.1,<2.0.0)",
     "ruff (>=0.12.4,<0.13.0)",
     "pyright (>=1.1.403,<2.0.0)",
-    "pymysql (>=1.1.1,<2.0.0)"
+    "pymysql (>=1.1.1,<2.0.0)",
+    "pydantic (>=2.11.7,<3.0.0)"
 ]
 
 
