docker: added Dockerfile for deploying

--- a/.dockerignore
+++ b/.dockerignore
@@ -135,7 +135,6 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
 .envrc
 .venv
 env/
@@ -202,4 +201,7 @@ __marimo__/
 # Streamlit
 .streamlit/secrets.toml
 
+# Custom
 .vscode
+README.md
+Dockerfile
